--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactberry",
+  "name": "@codeberryinc/reactberry",
   "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
