--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codeberryinc/reactberry.git",
+  },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
