--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "peerDependencies": {
     "react": ">= 16",
-    "react-dom": ">= 16"
+    "react-dom": ">= 16",
+    "styled-components": "^5.1.1",
+    "styled-system": "^5.1.5",
   }
 }
