--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "react": ">= 16",
     "react-dom": ">= 16",
     "styled-components": "^5.1.1",
-    "styled-system": "^5.1.5",
+    "styled-system": "^5.1.5"
   }
 }
