--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^5.1.1",
-    "styled-system": "^5.1.5",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
