--- a/packages/reactberry:core/package.json
+++ b/packages/reactberry:core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reactberry/core",
-  "version": "1.0.25",
+  "version": "1.1.0-alpha.0",
   "main": "index.js",
   "files": [
     "dist"
