--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "lerna run compile",
+    "build": "lerna run build",
     "test": "lerna run test"
   },
   "devDependencies": {
