--- a/packages/reactberry:forms/package.json
+++ b/packages/reactberry:forms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reactberry/forms",
-  "version": "1.1.1-alpha.0",
+  "version": "1.1.1",
   "private": true,
   "main": "index.js",
   "files": [
@@ -15,7 +15,7 @@
     "test": "echo @reactberry/forms"
   },
   "dependencies": {
-    "@reactberry/core": "^1.1.0-alpha.0",
+    "@reactberry/core": "^1.1.0",
     "chroma-js": "^2.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
