--- a/packages/reactberry:forms/package.json
+++ b/packages/reactberry:forms/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-form": "^4.0.1",
     "styled-components": "^5.1.1",
     "styled-system": "^5.1.5"
   },
