--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "workspaces": [
     "packages/*"
   ],
+  "engines": {
+   "node": ">=12.0.0"
+ },
   "scripts": {
     "build": "lerna run build",
-    "test": "lerna run test"
+    "test": "lerna run test",
+    "clean": "lerna run clean",
+    "dev": "cd packages/playground && yarn start"
   },
   "devDependencies": {
     "lerna": "^3.15.0"
